--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,22 +2,21 @@
     padding: 1rem;
     margin-bottom: 1rem;
     cursor: pointer;
-    height: 10rem;
     width: 10rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
+}
 
-    > p {
-        height: 3rem;
-        width: 80%;
-        border: 1px solid #000;
-        text-align: center;
-        font-size: 0.9rem;
-        font-weight: 400;
-        padding: 1rem;
-    }
+.color-pickers > p {
+    height: 3rem;
+    width: 80%;
+    border: 1px solid #000;
+    text-align: center;
+    font-size: 0.9rem;
+    font-weight: 400;
+    padding: 1rem;
 }
 
 .color-pickers:hover {
@@ -53,11 +52,8 @@
 
 .menu-logo-brand {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
     align-items: center;
     height: 100%;
-    width: 20%;
     text-decoration: none;
     margin-left: 1rem;
     margin-right: 1rem;
